#163059: IllegalArgumentException: URL must be a folder URL (append '/' if necessary): file:/Users/klauer/.netbeans/dev/var/cache/index/s534/java/13/classes